Partial_14Dec2021/force-app/main/default/objects/UsersForAttendance__c/UsersForAttendance__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>UsersForAttendance</label>
</CustomObject>