Partial_14Dec2021/force-app/main/default/objects/UsersForAttendance__c/fields/HeadBrandingName__c.field-meta.xml
<CustomField>
    <fullName>HeadBrandingName__c</fullName>
    <label>HeadBrandingName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>