Partial_14Dec2021/force-app/main/default/objects/UsersForAttendance__c/fields/HeadBrandingUserId__c.field-meta.xml
<CustomField>
    <fullName>HeadBrandingUserId__c</fullName>
    <label>HeadBrandingUserId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>