Partial_14Dec2021/force-app/main/default/objects/UsersForAttendance__c/fields/TLName__c.field-meta.xml
<CustomField>
    <fullName>TLName__c</fullName>
    <label>TLName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>