Partial_14Dec2021/force-app/main/default/objects/UsersForAttendance__c/fields/TLUserId__c.field-meta.xml
<CustomField>
    <fullName>TLUserId__c</fullName>
    <label>TLUserId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>